fixes for images links

--- a/contact/index.html
+++ b/contact/index.html
@@ -111,25 +111,25 @@
 
            <div class="Container-ContactImg">
                 <a href="https://www.xing.com/profile/Oksana_Kondratiuk?sc_o=mxb_p" target="_blank">
-            <img class='ContactImg' src='/static/img/works/Xing.svg' />
+            <img class='ContactImg' src='static/img/works/Xing.svg' />
                     </a>
                 <a href="https://www.behance.net/Ksuy" target="_blank">
-            <img class='ContactImg' src='/static/img/works/Behance.svg' />
+            <img class='ContactImg' src='static/img/works/Behance.svg' />
                      </a>
                 <a href="mailto:Ksyu@web.de" target="_blank">
-            <img class='ContactImg' src='/static/img/works/E-mail.svg' />
+            <img class='ContactImg' src='static/img/works/E-mail.svg' />
                      </a>
                 <a href="skype:Oksana.o.k.?chat" target="_blank">
-            <img class='ContactImg' src='/static/img/works/Skype.svg' />
+            <img class='ContactImg' src='static/img/works/Skype.svg' />
                     </a>
                  <a href="https://github.com/KsyuFoxy" target="_blank">
-            <img class='ContactImg' src='/static/img/works/Git.svg' />
+            <img class='ContactImg' src='static/img/works/Git.svg' />
                     </a>
            </div>
     </div>
 
     <div class="col-md-6 col-xs-12 ContactPageImgDiv">
-        <img class='ContactPageImg' src='/static/img/works/HalfCyrcle.png' />
+        <img class='ContactPageImg' src='static/img/works/HalfCyrcle.png' />
     </div>
 </div>
 
