--- a/photos/index.html
+++ b/photos/index.html
@@ -106,7 +106,7 @@
 <div class="flex-row portfolio-container">
     <div class="flex-col flex-col-People">
         <a href="people">
-            <img class='portfolio-img' src='/static/img/works/Karnaval.jpg'/>
+            <img class='portfolio-img' src='static/img/works/Karnaval.jpg'/>
             <span>People</span>
         </a>
     </div>
@@ -115,13 +115,13 @@
         <div class="flex-row">
             <div class="flex-col flex-col-other">
                 <a href="nature">
-                    <img class='portfolio-img' src='/static/img/works/Green.jpg'/>
+                    <img class='portfolio-img' src='static/img/works/Green.jpg'/>
                     <span>Nature</span>
                 </a>
             </div>
             <div class="flex-col flex-col-other">
                 <a href="food">
-                    <img class='portfolio-img' src='/static/img/works/Ice-cream.jpg'/>
+                    <img class='portfolio-img' src='static/img/works/Ice-cream.jpg'/>
                     <span>Food</span>
                 </a>
              </div>
@@ -129,13 +129,13 @@
         <div class="flex-row">
             <div class="flex-col flex-col-other">
                 <a href="other">
-                    <img class='portfolio-img' src='/static/img/works/Fireworks.jpg'/>
+                    <img class='portfolio-img' src='static/img/works/Fireworks.jpg'/>
                     <span>Other</span>
                 </a>
             </div>
             <div class="flex-col flex-col-other">
                 <a href="buildings">
-                    <img class='portfolio-img' src='/static/img/works/House.jpg'/>
+                    <img class='portfolio-img' src='static/img/works/House.jpg'/>
                     <span>Buildings</span>
                 </a>
             </div>
@@ -147,31 +147,31 @@
 
             <div class="flex-col flex-col-other">
                 <a href="people">
-                    <img class='portfolio-imgSmall' src='/static/img/works/KarnavalSmall.jpg'/>
+                    <img class='portfolio-imgSmall' src='static/img/works/KarnavalSmall.jpg'/>
                     <span>People</span>
                 </a>
              </div>
             <div class="flex-col flex-col-other">
                 <a href="nature">
-                    <img class='portfolio-imgSmall' src='/static/img/works/GreenSmall.jpg'/>
+                    <img class='portfolio-imgSmall' src='static/img/works/GreenSmall.jpg'/>
                     <span>Nature</span>
                 </a>
             </div>
             <div class="flex-col flex-col-other">
                 <a href="food">
-                    <img class='portfolio-imgSmall' src='/static/img/works/Ice-cream.jpg'/>
+                    <img class='portfolio-imgSmall' src='static/img/works/Ice-cream.jpg'/>
                     <span>Food</span>
                 </a>
             </div>
             <div class="flex-col flex-col-other">
                 <a href="other">
-                    <img class='portfolio-imgSmall' src='/static/img/works/Fireworks.jpg'/>
+                    <img class='portfolio-imgSmall' src='static/img/works/Fireworks.jpg'/>
                     <span>Other</span>
                 </a>
             </div>
             <div class="flex-col flex-col-other">
                 <a href="buildings">
-                    <img class='portfolio-imgSmall' src='/static/img/works/HouseSmall.jpg'/>
+                    <img class='portfolio-imgSmall' src='static/img/works/HouseSmall.jpg'/>
                     <span>Buildings</span>
                 </a>
             </div>
