--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -105,35 +105,38 @@
         <div class="container-works-name">
             <h2>Portfolio</h2>
                 <ul onmouseleave="showDefaultImg()">
-                    <a onmouseover="showImgOnMouseOver('/static/img/works/Traveling-Magazin1.jpg')"
+                    <a onmouseover="showImgOnMouseOver('static/img/works/Traveling-Magazin1.jpg')"
                        href="https://www.behance.net/gallery/35264791/Traveling-Magazine"
                        target="_blank"
                     >
                         <li>Traveling Magazine</li>
                     </a>
-                     <a onmouseover="showImgOnMouseOver('/static/img/works/Wedding-Landing-page.jpg')" href="https://www.behance.net/gallery/35047821/Web-Mobile-landing-pages" target="_blank">
+                     <a onmouseover="showImgOnMouseOver('static/img/works/Wedding-Landing-page.jpg')" href="https://www.behance.net/gallery/35047821/Web-Mobile-landing-pages" target="_blank">
                     <li>Wedding landing pages</li>
                          </a>
-                    <a onmouseover="showImgOnMouseOver('/static/img/works/Banners1.jpg')" href="https://www.behance.net/gallery/33823266/Banner-for-IT" target="_blank">
+                    <a onmouseover="showImgOnMouseOver('static/img/works/Banners1.jpg')" href="https://www.behance.net/gallery/33823266/Banner-for-IT" target="_blank">
                     <li>Banner</li>
                         </a>
-                    <a onmouseover="showImgOnMouseOver('/static/img/works/Logo-XStyle1.jpg')" href="https://www.behance.net/gallery/33486415/X-Style-Logo-Business-cards" target="_blank">
+                    <a onmouseover="showImgOnMouseOver('static/img/works/Logo-XStyle1.jpg')" href="https://www.behance.net/gallery/33486415/X-Style-Logo-Business-cards" target="_blank">
                     <li>Logo</li>
                         </a>
-                    <a onmouseover="showImgOnMouseOver('/static/img/works/DakotA1.jpg')" href="https://www.behance.net/gallery/33638553/pub-DakotA" target="_blank">
+                    <a onmouseover="showImgOnMouseOver('static/img/works/DakotA1.jpg')" href="https://www.behance.net/gallery/33638553/pub-DakotA" target="_blank">
                     <li>Pub DakotA</li>
                         </a>
-                     <a onmouseover="showImgOnMouseOver('/static/img/works/Trinity.jpg')" href="https://www.behance.net/gallery/32508417/TRINITY-(Dance-school)-Desktop-version" target="_blank">
+                     <a onmouseover="showImgOnMouseOver('static/img/works/Trinity.jpg')" href="https://www.behance.net/gallery/32508417/TRINITY-(Dance-school)-Desktop-version" target="_blank">
                     <li>Trinity dance school</li>
                          </a>
-                    <a onmouseover="showImgOnMouseOver('/static/img/works/Wedding-site1.jpg')" href="https://www.behance.net/gallery/32516855/Wedding-site" target="_blank">
+                    <a onmouseover="showImgOnMouseOver('static/img/works/Mob_Tab_App.jpg')" href="https://www.behance.net/gallery/42220281/mobile-tablet-app" target="_blank">
+                    <li>Mobile & tablet app</li>
+                        </a>
+                    <a onmouseover="showImgOnMouseOver('static/img/works/Wedding-site1.jpg')" href="https://www.behance.net/gallery/32516855/Wedding-site" target="_blank">
                     <li>Wedding site</li>
                         </a>
                 </ul>
         </div>
         <div class="container-work-img">
             <a href="https://www.behance.net/Ksuy" target="_blank">
-            <img id='imgOnMouseOver' src='/static/img/works/Portfolio.svg'/>
+            <img id='imgOnMouseOver' src='static/img/works/Portfolio.svg'/>
                 </a>
         </div>
 
@@ -145,7 +148,7 @@
         imgOnMouseOver.style.display = 'block';
     }
     function showDefaultImg() {
-        imgOnMouseOver.src = '/static/img/works/Portfolio.svg';
+        imgOnMouseOver.src = 'static/img/works/Portfolio.svg';
     }
 
 </script>
